# sbe.eggstensibility

./: .gitignore  .releaserc  CHANGELOG.md  LICENSE.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: acceptance_tests.yml  deploy.yml  linters.yml
sbe/eggstensibility/: __init__.py  defaults.py  exceptions.py  protocols.py
sbe/eggstensibility/_internal/: __init__.py  builder.py  description.py  logging.py  order.py  resolver.py
test/acceptance/: README.md  test_custom.py  test_default.py
test/acceptance/custom/: __init__.py  custom_implementation.py
test/acceptance/custom/modules/module_a/: extension.json  module_a.py
test/acceptance/custom/modules/module_b/: extension.json  module_b.py
test/acceptance/default/: __init__.py
test/acceptance/default/modules/module_a/: _extension_impl.py  extension.py
test/acceptance/default/modules/module_b/: _extension_impl.py  extension.py
